# routes/api.php
@@ -8,5 +8,9 @@ Route::prefix('v1')->group(function () {
         Route::prefix('orders')->group(function () {
             Route::get('monthly-trend', Report\OrderMonthlyTrendReportController::class);
         });
+
+        Route::prefix('sales')->group(function () {
+            Route::get('target-vs-actual-revenue', Report\SalesTargetVsRevenueReportController::class);
+        });
     });
 });
