# storage/api-docs/api-docs.json
@@ -63,6 +63,44 @@
                     }
                 }
             }
+        },
+        "/reports/sales/target-vs-actual-revenue": {
+            "get": {
+                "tags": [
+                    "Report"
+                ],
+                "summary": "Get Sales Target vs Actual Revenue Report",
+                "description": "Retrieve the sales target vs actual revenue report",
+                "operationId": "reports.sales.target-vs-actual-revenue",
+                "parameters": [
+                    {
+                        "name": "sales_id",
+                        "in": "query",
+                        "description": "Filter by sales ID",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "The request has succeeded"
+                    },
+                    "404": {
+                        "description": "The requested resource could not be found"
+                    },
+                    "400": {
+                        "description": "The server cannot process the request due to client error"
+                    },
+                    "422": {
+                        "description": "The request was well-formed but contains semantic errors"
+                    },
+                    "500": {
+                        "description": "Something went wrong on the server"
+                    }
+                }
+            }
         }
     },
     "tags": [
